Oopsie...moving logo down

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -2449,6 +2449,7 @@ botania {
     B:pool=false
     B:pool.1=false
     B:pool.2=false
+    B:pool.3=false
     B:prism=false
     B:prismarine=true
     B:prismarine.1=true
