--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -7,6 +7,9 @@ general {
     # Set this to false to disable the 1.9 Ender features available as recipes. This only disables the recipes and entries. Old ones that are already in the world will stay.
     B:19enderStuff.enabled=true
 
+    # Set this to false to disable the Adaptative Config. Adaptative Config changes any default config values from old versions to the new defaults to make sure you aren't missing out on changes because of old configs. It will not touch any values that were changed manually.
+    B:adaptativeConfig.enabled=true
+
     # Set this to false to disable custom armor models.
     B:armorModels.enable=true
 
@@ -54,6 +57,9 @@ general {
 
     # Set this to false to disable the animated 3D render for the Lexica Botania.
     B:lexicon.render.3D=true
+
+    # Set this to true to invert the Ring of Magnetization's controls (from shift to stop to shift to work)
+    B:magnetRing.invert=false
 
     # The height of the mana display bar in above the XP bar. You can change this if you have a mod that changes where the XP bar is.
     I:manaBar.height=29
@@ -110,19 +116,19 @@ general {
     # Set this to true to use a static wand beam that shows every single position of the burst, similar to the way it used to work on old Botania versions. Warning: Disabled by default because it may be laggy.
     B:wandBeam.static=false
 
-    # The density of each Botania flower patch generated, defaults to 16, the lower the number, the less each patch will have.
+    # The density of each Botania flower patch generated, defaults to 2, the lower the number, the less each patch will have.
     I:worldgen.flower.density=16
 
-    # The chance for a Botania flower patch to be generated. The higher this value is the less patches will exist and the more flower each will have.
+    # The inverse chance for a Botania flower patch to be generated, defaults to 16. The higher this value is the less patches will exist and the more flower each will have.
     I:worldgen.flower.patchChance=4
 
-    # The size of each Botania flower patch. The larger this is the farther the each patch can spread
+    # The size of each Botania flower patch, defaults to 6. The larger this is the farther the each patch can spread
     I:worldgen.flower.patchSize=6
 
     # The quantity of Botania flower patches to generate in the world, defaults to 2, the lower the number the less patches generate.
     I:worldgen.flower.quantity=2
 
-    # The chance for a Botania flower generated in a patch to be a tall flowe. 0.1 is 10%, 1 is 100%.
+    # The chance for a Botania flower generated in a patch to be a tall flower. 0.1 is 10%, 1 is 100%. Defaults to 0.05
     D:worldgen.flower.tallChance=0.1
 
     # The quantity of Botania mushrooms to generate underground, in the world, defaults to 40, the lower the number the less patches generate.
@@ -1120,18 +1126,26 @@ shedding {
     I:MutantCreatures.ZombieMinion.lexiconDisplaySize=40
     I:MutantCreatures.ZombieMinion.metadata=0
     I:MutantCreatures.ZombieMinion.rate=-1
+
+    # Configuration of Shedding for Natura.FlameSpider
     S:Natura.FlameSpider.item=
     I:Natura.FlameSpider.lexiconDisplaySize=40
     I:Natura.FlameSpider.metadata=0
     I:Natura.FlameSpider.rate=-1
+
+    # Configuration of Shedding for Natura.FlameSpiderBaby
     S:Natura.FlameSpiderBaby.item=
     I:Natura.FlameSpiderBaby.lexiconDisplaySize=40
     I:Natura.FlameSpiderBaby.metadata=0
     I:Natura.FlameSpiderBaby.rate=-1
+
+    # Configuration of Shedding for Natura.Imp
     S:Natura.Imp.item=
     I:Natura.Imp.lexiconDisplaySize=40
     I:Natura.Imp.metadata=0
     I:Natura.Imp.rate=-1
+
+    # Configuration of Shedding for Natura.NitroCreeper
     S:Natura.NitroCreeper.item=
     I:Natura.NitroCreeper.lexiconDisplaySize=40
     I:Natura.NitroCreeper.metadata=0
@@ -1242,20 +1256,14 @@ shedding {
     I:Squid.lexiconDisplaySize=20
     I:Squid.metadata=0
     I:Squid.rate=18000
-
-    # Configuration of Shedding for TConstruct.Crystal
     S:TConstruct.Crystal.item=
     I:TConstruct.Crystal.lexiconDisplaySize=40
     I:TConstruct.Crystal.metadata=0
     I:TConstruct.Crystal.rate=-1
-
-    # Configuration of Shedding for TConstruct.EdibleSlime
     S:TConstruct.EdibleSlime.item=
     I:TConstruct.EdibleSlime.lexiconDisplaySize=40
     I:TConstruct.EdibleSlime.metadata=0
     I:TConstruct.EdibleSlime.rate=-1
-
-    # Configuration of Shedding for TConstruct.KingSlime
     S:TConstruct.KingSlime.item=
     I:TConstruct.KingSlime.lexiconDisplaySize=40
     I:TConstruct.KingSlime.metadata=0
@@ -2262,8 +2270,6 @@ shedding {
     I:jurassicraft.velociraptor.lexiconDisplaySize=40
     I:jurassicraft.velociraptor.metadata=0
     I:jurassicraft.velociraptor.rate=-1
-
-    # Configuration of Shedding for lootablebodies_EntityLootableBody
     S:lootablebodies_EntityLootableBody.item=
     I:lootablebodies_EntityLootableBody.lexiconDisplaySize=40
     I:lootablebodies_EntityLootableBody.metadata=0
