--- a/config/enviromine/profiles/default/CustomProperties/Botania.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/Botania.cfg
@@ -1,6 +1,7 @@
 # Configuration file
 
 block {
+
     BlockFloatingSpecialFlower {
         S:01.Name=Botania:BlockFloatingSpecialFlower
         I:02.MetaID=-1
@@ -14,22 +15,8 @@ block {
         S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
-        }
-    
-    BlockLivingwood {
-        S:01.Name=Botania:Livingwood
-        I:02.MetaID=-1
-        S:03.DropName=
-        I:04.DropMetaID=-1
-        I:05.DropNumber=-1
-        B:"06.Enable Temperature"=false
-        D:07.Temperature=0.0
-        D:"08.Air Quality"=0.0
-        D:09.Sanity=0.0
-        S:10.Stability=strong
-        B:11.Slides=false
-        B:"12.Slides When Wet"=false
-        }
+    }
+
     BlockLivingwood {
         S:01.Name=Botania:Livingwood:5
         I:02.MetaID=5
@@ -43,8 +30,9 @@ block {
         S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
-        }
-    Block BlockPylon {
+    }
+
+    "Block BlockPylon" {
         S:01.Name=Botania:BlockPylon
         I:02.MetaID=-1
         S:03.DropName=
@@ -57,5 +45,8 @@ block {
         S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
-        }
     }
+
+}
+
+
