Updating quests; fixing gravestone

--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -999,6 +999,12 @@ shedding {
     I:MorePlanet.Melon.metadata=0
     I:MorePlanet.Melon.rate=-1
 
+    # Configuration of Shedding for MorePlanet.MilkCow
+    S:MorePlanet.MilkCow.item=
+    I:MorePlanet.MilkCow.lexiconDisplaySize=40
+    I:MorePlanet.MilkCow.metadata=0
+    I:MorePlanet.MilkCow.rate=-1
+
     # Configuration of Shedding for MorePlanet.SiriusBlaze
     S:MorePlanet.SiriusBlaze.item=
     I:MorePlanet.SiriusBlaze.lexiconDisplaySize=40
