--- a/config/MorePlanet's/core.cfg
+++ b/config/MorePlanet's/core.cfg
@@ -52,7 +52,7 @@ general {
     # If set this to true. Overworld mobs and creatures will be spawning on Fronos by default, but this will disable Galacticraft evolved mob spawning. Default is false.
     B:"Allow Overworld Mobs/Creatures Spawning on Fronos Planet"=false
 
-    # If you disable this option. When you mining any blocks on the Nibiru you will getting Infected Gas. and Infected Gas does not affected when equipped Purple Crystal Armor. Default is false.
+    # If you disable this option. When you mining any blocks on the Nibiru you will getting Infected Gas. and Infected Gas does not affected when equipped Tier 2 Thermal Armor. Default is false.
     B:"Disable Infected Gas on Nibiru"=false
     B:"Disable Koentus Village Gen"=false
 
