--- a/config/Treecapitator.cfg
+++ b/config/Treecapitator.cfg
@@ -476,6 +476,99 @@ tree_and_mod_configs {
 
     }
 
+    moreplanet {
+        M:modID=MorePlanet
+        S:axeIDList=MorePlanet:quontonium_axe; MorePlanet:fronisium_axe; MorePlanet:polongnius_meteor_axe; MorePlanet:palladium_axe; MorePlanet:purple_crystal_axe; MorePlanet:red_gem_axe; MorePlanet:norium_axe; MorePlanet:koentus_meteor_axe; MorePlanet:white_crystal_axe; MorePlanet:black_diamond_axe; MorePlanet:iridium_axe; MorePlanet:candy_axe; MorePlanet:frozen_iron_axe; MorePlanet:uranium_axe; MorePlanet:sulfur_axe; MorePlanet:xeonium_axe
+        S:shearsIDList=
+
+        # This setting controls whether or not the mod config section it appears in will override an IMC message sent by that mod. [default: false]
+        B:overrideIMC=false
+
+        alien {
+            S:logs=MorePlanet:alien_log, 0; MorePlanet:alien_log, 4; MorePlanet:alien_log, 8
+            S:leaves=MorePlanet:alien_leaves, 0; MorePlanet:alien_leaves, 8
+
+            # Optional
+            B:requireLeafDecayCheck=false
+        }
+
+        ancientdark {
+            S:logs=MorePlanet:nibiru_log, 0; MorePlanet:nibiru_log, 4; MorePlanet:nibiru_log, 8
+            S:leaves=MorePlanet:ancient_dark_leaves, 0; MorePlanet:ancient_dark_leaves, 1; MorePlanet:ancient_dark_leaves, 2; MorePlanet:ancient_dark_leaves, 3; MorePlanet:ancient_dark_leaves, 8; MorePlanet:ancient_dark_leaves, 9; MorePlanet:ancient_dark_leaves, 10; MorePlanet:ancient_dark_leaves, 11
+
+            # Optional
+            B:requireLeafDecayCheck=false
+        }
+
+        coconut {
+            S:logs=MorePlanet:fronos_log, 0; MorePlanet:fronos_log, 4; MorePlanet:fronos_log, 8
+            S:leaves=MorePlanet:fronos_leaves, 0; MorePlanet:fronos_leaves, 8
+
+            # Optional
+            B:requireLeafDecayCheck=false
+        }
+
+        crystal {
+            S:logs=MorePlanet:crystal_log, 0; MorePlanet:crystal_log, 4; MorePlanet:crystal_log, 8
+            S:leaves=MorePlanet:crystal_leaves, 0; MorePlanet:crystal_leaves, 8
+
+            # Optional
+            B:requireLeafDecayCheck=false
+        }
+
+        europa {
+            S:logs=MorePlanet:europa_log, 0; MorePlanet:europa_log, 4; MorePlanet:europa_log, 8
+            S:leaves=MorePlanet:europa_leaves, 0; MorePlanet:europa_leaves, 8
+
+            # Optional
+            B:requireLeafDecayCheck=false
+        }
+
+        orange {
+            S:logs=MorePlanet:nibiru_log, 1; MorePlanet:nibiru_log, 5; MorePlanet:nibiru_log, 9
+            S:leaves=MorePlanet:orange_leaves, 0; MorePlanet:orange_leaves, 1; MorePlanet:orange_leaves, 2; MorePlanet:orange_leaves, 3; MorePlanet:orange_leaves, 8; MorePlanet:orange_leaves, 9; MorePlanet:orange_leaves, 10; MorePlanet:orange_leaves, 11
+
+            # Optional
+            B:requireLeafDecayCheck=false
+        }
+
+        purplemaple {
+            S:logs=MorePlanet:fronos_log, 1; MorePlanet:fronos_log, 5; MorePlanet:fronos_log, 9
+            S:leaves=MorePlanet:fronos_leaves2, 2; MorePlanet:fronos_leaves2, 10
+
+            # Optional
+            B:requireLeafDecayCheck=false
+        }
+
+        redmaple {
+            S:logs=MorePlanet:fronos_log, 1; MorePlanet:fronos_log, 5; MorePlanet:fronos_log, 9
+            S:leaves=MorePlanet:fronos_leaves2, 0; MorePlanet:fronos_leaves2, 8
+
+            # Optional
+            B:requireLeafDecayCheck=false
+        }
+
+        skymushroom {
+            S:logs=MorePlanet:huge_sky_mushroom, 10; MorePlanet:huge_sky_mushroom, 15
+            S:leaves=MorePlanet:huge_sky_mushroom, 1; MorePlanet:huge_sky_mushroom, 2; MorePlanet:huge_sky_mushroom, 3; MorePlanet:huge_sky_mushroom, 4; MorePlanet:huge_sky_mushroom, 5; MorePlanet:huge_sky_mushroom, 6; MorePlanet:huge_sky_mushroom, 7; MorePlanet:huge_sky_mushroom, 8; MorePlanet:huge_sky_mushroom, 9; MorePlanet:huge_sky_mushroom, 14
+
+            # Optional
+            B:requireLeafDecayCheck=false
+
+            # Optional
+            I:maxHorLeafBreakDist=6
+        }
+
+        yellowmaple {
+            S:logs=MorePlanet:fronos_log, 1; MorePlanet:fronos_log, 5; MorePlanet:fronos_log, 9
+            S:leaves=MorePlanet:fronos_leaves2, 1; MorePlanet:fronos_leaves2, 9
+
+            # Optional
+            B:requireLeafDecayCheck=false
+        }
+
+    }
+
     biomesoplenty {
         M:modID=BiomesOPlenty
         S:axeIDList=BiomesOPlenty:axeAmethyst; BiomesOPlenty:axeMud
