--- a/config/OpenBlocks.cfg
+++ b/config/OpenBlocks.cfg
@@ -6,7 +6,7 @@ additional {
      >
 
     # Should player inventories be stored after death (can be later restored with ob_inventory command)
-    B:dumpDeadPlayersInventories=false
+    B:dumpDeadPlayersInventories=true
 }
 
 
@@ -26,7 +26,7 @@ blocks {
     B:fan=true
     B:flag=true
     B:goldenegg=true
-    B:grave=true
+    B:grave=false
     B:guide=true
     B:heal=true
     B:imaginary=true
