Remove item damage on death

--- a/config/OpenBlocks.cfg
+++ b/config/OpenBlocks.cfg
@@ -3,10 +3,11 @@
 additional {
     # List any mob names you want disabled on the server
     S:disableMobNames <
+        Whale
      >
 
     # Should player inventories be stored after death (can be later restored with ob_inventory command)
-    B:dumpDeadPlayersInventories=true
+    B:dumpDeadPlayersInventories=false
 }
 
 
