Remove butterfly, cricket, and centipede spawning entirely

--- a/config/OpenBlocks.cfg
+++ b/config/OpenBlocks.cfg
@@ -4,10 +4,13 @@ additional {
     # List any mob names you want disabled on the server
     S:disableMobNames <
         Whale
+        Butterfly
+        Cricket
+        Centipede
      >
 
     # Should player inventories be stored after death (can be later restored with ob_inventory command)
-    B:dumpDeadPlayersInventories=false
+    B:dumpDeadPlayersInventories=true
 }
 
 
