--- a/config/roguelike_dungeons/roguelike.cfg
+++ b/config/roguelike_dungeons/roguelike.cfg
@@ -1,11 +1,13 @@
-dimensionWL=0
-levelRange=80
-levelMaxRooms=30
-spawnFrequency=10
 dimensionBL=
-preciousBlocks=true
-doNoveltySpawn=true
-levelScatter=10
-generous=false
+dimensionWL=0
 doNaturalSpawn=true
+doNoveltySpawn=true
+generous=false
+levelMaxRooms=30
+levelRange=80
+levelScatter=10
 looting=0.085
+lowerLimit=60
+preciousBlocks=true
+spawnFrequency=10
+upperLimit=100
