--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -7718,6 +7718,9 @@ iguanatweakstconstruct {
 
 
 immersiveengineering {
+    B:clothDevice=false
+    B:concreteStairs=false
+    B:concreteTileStairs=false
     B:hemp=false
     B:metalDecoration=false
     B:metalDecoration.1=false
@@ -7742,6 +7745,7 @@ immersiveengineering {
     B:metalDevice.12=false
     B:metalDevice.13=false
     B:metalDevice.14=false
+    B:metalDevice.15=false
     B:metalDevice.2=false
     B:metalDevice.3=false
     B:metalDevice.4=false
@@ -7752,6 +7756,8 @@ immersiveengineering {
     B:metalDevice.9=false
     B:metalDevice2=false
     B:metalDevice2.1=false
+    B:metalDevice2.10=false
+    B:metalDevice2.2=false
     B:metalDevice2.3=false
     B:metalDevice2.4=false
     B:metalDevice2.5=false
@@ -7814,6 +7820,8 @@ immersiveengineering {
     B:woodenDevice.5=false
     B:woodenDevice.6=false
     B:woodenStairs=false
+    B:woodenStairs1=false
+    B:woodenStairs2=false
 }
 
 
