--- a/config/enviromine/profiles/default/CustomProperties/ChromatiCraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/ChromatiCraft.cfg
@@ -108,7 +108,20 @@ blocks {
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
-
+    TileEntityPylon {
+        S:01.Name=ChromatiCraft:chromaticraft_block_pylon
+        S:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
 }
 
 
