Lot's of changes

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -11935,6 +11935,20 @@ storagedrawersbop {
     B:trim.7=true
     B:trim.8=true
     B:trim.9=true
+    B:trimSort=false
+    B:trimSort.1=false
+    B:trimSort.11=false
+    B:trimSort.12=false
+    B:trimSort.13=false
+    B:trimSort.14=false
+    B:trimSort.2=false
+    B:trimSort.3=false
+    B:trimSort.4=false
+    B:trimSort.5=false
+    B:trimSort.6=false
+    B:trimSort.7=false
+    B:trimSort.8=false
+    B:trimSort.9=false
 }
 
 
@@ -12258,6 +12272,35 @@ storagedrawersforestry {
     B:trimB.7=true
     B:trimB.8=true
     B:trimB.9=true
+    B:trimSortA=false
+    B:trimSortA.1=false
+    B:trimSortA.10=false
+    B:trimSortA.11=false
+    B:trimSortA.12=false
+    B:trimSortA.13=false
+    B:trimSortA.14=false
+    B:trimSortA.15=false
+    B:trimSortA.2=false
+    B:trimSortA.3=false
+    B:trimSortA.4=false
+    B:trimSortA.5=false
+    B:trimSortA.6=false
+    B:trimSortA.7=false
+    B:trimSortA.8=false
+    B:trimSortA.9=false
+    B:trimSortB=false
+    B:trimSortB.1=false
+    B:trimSortB.10=false
+    B:trimSortB.11=false
+    B:trimSortB.12=false
+    B:trimSortB.2=false
+    B:trimSortB.3=false
+    B:trimSortB.4=false
+    B:trimSortB.5=false
+    B:trimSortB.6=false
+    B:trimSortB.7=false
+    B:trimSortB.8=false
+    B:trimSortB.9=false
 }
 
 
@@ -12493,6 +12536,27 @@ storagedrawersmisc {
     B:trim1.7=true
     B:trim1.8=true
     B:trim1.9=true
+    B:trimSort0=false
+    B:trimSort0.1=false
+    B:trimSort0.2=false
+    B:trimSort0.3=false
+    B:trimSort0.4=false
+    B:trimSort0.5=false
+    B:trimSort0.6=false
+    B:trimSort0.7=false
+    B:trimSort0.8=false
+    B:trimSort1=false
+    B:trimSort1.1=false
+    B:trimSort1.10=false
+    B:trimSort1.11=false
+    B:trimSort1.2=false
+    B:trimSort1.3=false
+    B:trimSort1.4=false
+    B:trimSort1.5=false
+    B:trimSort1.6=false
+    B:trimSort1.7=false
+    B:trimSort1.8=false
+    B:trimSort1.9=false
 }
 
 
@@ -12640,6 +12704,19 @@ storagedrawersnatura {
     B:trim.7=true
     B:trim.8=true
     B:trim.9=true
+    B:trimSort=false
+    B:trimSort.1=false
+    B:trimSort.10=false
+    B:trimSort.11=false
+    B:trimSort.12=false
+    B:trimSort.2=false
+    B:trimSort.3=false
+    B:trimSort.4=false
+    B:trimSort.5=false
+    B:trimSort.6=false
+    B:trimSort.7=false
+    B:trimSort.8=false
+    B:trimSort.9=false
 }
 
 
