--- a/config/LaunchGui.cfg
+++ b/config/LaunchGui.cfg
@@ -112,7 +112,7 @@ notice {
         S:linkButtonText=Gameplay Changes
 
         # Link to open when clicked. [default: http://tehnut.info/]
-        S:linkButtonUrl=http://bit.ly/1CLRfNc
+        S:linkButtonUrl=http://revolutionpack.info
     }
 
     ##########################################################################################################
@@ -152,7 +152,7 @@ notice {
         # %name% - Provides modpackName
         # %version% - Provides modpackVersion
         # %acro% - Provides modpackAcronym [default: ]
-        S:startupGuiLines=
+        S:startupGuiLines=Welcome to the Revolution pack!\nNormally, breaking news is featured in this window, but Minecraft was unable to communicate with the news site.
 
         # Title of the startup GUI. Shows as yellow text. [default: TITLE]
         S:startupGuiTitle=Revolution
@@ -202,11 +202,11 @@ notice {
 
     information {
         # The version of your pack currently being shipped. [default: ]
-        S:currentPackVersion=
+        S:currentPackVersion=2.0.0.0
 
         # URL to check for a new version. Required a raw text file.
         # See here for an example: https://raw.githubusercontent.com/TehNut/LaunchGui/1.7.10/version.txt [default: http://tehnut.info]
-        S:updateCheckerUrl=http://tehnut.info
+        S:updateCheckerUrl=https://gist.githubusercontent.com/Haggle1996/fbddfb0dba2b257e0d3a/raw/revolutionVersion.txt
 
         # Information to display to your players whenever a new update is available.
         # Use "\n" to define a new line. If the line is still too long, it will split for you.
@@ -219,7 +219,7 @@ notice {
         S:updateGuiLines=Click the information button below to find out more!
 
         # A URL to a forum page (or similar) with information about the pack/update. [default: ]
-        S:updateInformationUrl=
+        S:updateInformationUrl=http://revolutionpack.info
     }
 
 }
