--- a/config/enviromine/profiles/default/CustomProperties/RFTools.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/RFTools.cfg
@@ -8,7 +8,7 @@
 
 blocks {
 
-    tile_wind_vane_machine_windvane {
+    blockSupport {
         S:01.Name=rftools:supportBlock
         I:02.MetaID=-1
         S:03.DropName=
