Final pass galaxy space

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -5941,6 +5941,96 @@ galacticraftmars {
 }
 
 
+galaxyspace {
+    B:acentauribbgrunt=true
+    B:acentauribbsubgrunt=true
+    B:barnarda2dandelion1=false
+    B:barnarda2dandelion2=false
+    B:barnarda2dirt=true
+    B:barnarda2grass=false
+    B:barnarda2leaves=false
+    B:barnarda2log=true
+    B:barnarda2sapling=false
+    B:ceresTChestT4=false
+    B:ceresbricks=true
+    B:ceresglowstone=true
+    B:ceresgrunt=true
+    B:ceresmachine=false
+    B:ceresmeteoricironore=true
+    B:ceressubgrunt=true
+    B:decoratecopperblock=true
+    B:deimosgrunt=true
+    B:deimosoriharukonore=true
+    B:deimossubgrunt=true
+    B:deimostinore=true
+    B:enceladusTChestT6=false
+    B:enceladusbricks=true
+    B:enceladuscrystal=false
+    B:enceladusglowstone=true
+    B:enceladusgrunt=true
+    B:enceladusice=true
+    B:europageyser=true
+    B:europagrunt=true
+    B:europaice=true
+    B:ganymedegrunt=true
+    B:ganymedemagnesiumore=true
+    B:ganymedesubgrunt=true
+    B:ganymedetitanuimore=true
+    B:ioTChestT5=false
+    B:ioash=true
+    B:iobricks=true
+    B:iocopperore=true
+    B:ioglowstone=true
+    B:iogrunt=true
+    B:iostone=true
+    B:iowolframiumore=true
+    B:leadore=true
+    B:makemakegrunt=true
+    B:makemakesubgrunt=true
+    B:mercurycore=true
+    B:mercurygrunt=true
+    B:mercuryironore=true
+    B:mercuryleadore=true
+    B:mercurynickelore=true
+    B:mercurysubgrunt=true
+    B:oberonadamantiteore=true
+    B:oberongrunt=true
+    B:oberonstone=true
+    B:oberonsubgrunt=true
+    B:phoboscobaltumore=true
+    B:phobosdeshore=true
+    B:phobosgrunt=true
+    B:phobosstone=true
+    B:phobossubgrunt=true
+    B:plutoTChestT8=false
+    B:plutobricks=true
+    B:plutoglowstone=true
+    B:plutogrunt=true
+    B:plutostone=true
+    B:plutosubgrunt=true
+    B:proteusTChestT7=false
+    B:proteusbricks=true
+    B:proteusglowstone=true
+    B:proteusgrunt=true
+    B:proteusplatinumore=true
+    B:proteusstone=true
+    B:proteussubgrunt=true
+    B:proteuswolframiumore=true
+    B:tileMethane=false
+    B:titangrunt=true
+    B:titanstone=true
+    B:titansubgrunt=true
+    B:tritongrunt=true
+    B:tritonmithrilore=true
+    B:tritonstone=true
+    B:tritonsubgrunt=true
+    B:venusdiamondore=true
+    B:venusgrunt=true
+    B:venussubgrunt=true
+    B:venussulfurore=true
+}
+
+
 gardencontainers {
     B:decorativepot=false
     B:decorativepot.1=false
