--- a/config/bbm/Wooden_Bucket.cfg
+++ b/config/bbm/Wooden_Bucket.cfg
@@ -7,6 +7,7 @@ general {
 
 
 pamharvestcraftsupport {
+    # Registers the milk bucket to the ore dictionary to be used in Pam's Harvest Craft recipes [default: true]
     B:EnableRegisteringMilkBucket=true
 }
 
