--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -73,6 +73,7 @@ tools
 		enchantment=0
 		itempanel=0
 		neiintegration_chestloot=0
+		neiintegration_dimension=0
 		neiintegration_entity=0
 		potion=0
 		
