IE and RC furnaces refine harder ores.

--- a/config/bigtrees/individualbiomes.cfg
+++ b/config/bigtrees/individualbiomes.cfg
@@ -961,6 +961,37 @@
     S:"biomesoplenty.Deciduous Forest Tall Oak Autumn"=
     S:"biomesoplenty.Deciduous Forest Tall Oak Brown"=
     S:"biomesoplenty.Deciduous Forest Yellow Big Birch"=
+    S:"biomesoplenty.Dense Forest Big Birch 0"=
+    S:"biomesoplenty.Dense Forest Big Birch 1"=
+    S:"biomesoplenty.Dense Forest Big Pine 0"=
+    S:"biomesoplenty.Dense Forest Big Pine 1"=
+    S:"biomesoplenty.Dense Forest Block Maple"=
+    S:"biomesoplenty.Dense Forest Block Oak 0"=
+    S:"biomesoplenty.Dense Forest Block Oak Autumn"=
+    S:"biomesoplenty.Dense Forest Block Oak Brown"=
+    S:"biomesoplenty.Dense Forest Block Oak Dark"=
+    S:"biomesoplenty.Dense Forest Cyprus Oak 0"=
+    S:"biomesoplenty.Dense Forest Cyprus Willow"=
+    S:"biomesoplenty.Dense Forest Dark Hat"=
+    S:"biomesoplenty.Dense Forest Dead Tree 0"=
+    S:"biomesoplenty.Dense Forest Great Oak 0"=
+    S:"biomesoplenty.Dense Forest Great Oak Autumn"=
+    S:"biomesoplenty.Dense Forest Great Oak Brown"=
+    S:"biomesoplenty.Dense Forest Great Oak Dark"=
+    S:"biomesoplenty.Dense Forest Hat Sacred Tree"=
+    S:"biomesoplenty.Dense Forest Hat Tree 0"=
+    S:"biomesoplenty.Dense Forest Pertrified Dead Tree"=
+    S:"biomesoplenty.Dense Forest Swamp Oak 0"=
+    S:"biomesoplenty.Dense Forest Tall Cherry"=
+    S:"biomesoplenty.Dense Forest Tall Dark Oak"=
+    S:"biomesoplenty.Dense Forest Tall Fir"=
+    S:"biomesoplenty.Dense Forest Tall Jacaranda"=
+    S:"biomesoplenty.Dense Forest Tall Magic Tree"=
+    S:"biomesoplenty.Dense Forest Tall Maple"=
+    S:"biomesoplenty.Dense Forest Tall Oak 0"=
+    S:"biomesoplenty.Dense Forest Tall Oak Autumn"=
+    S:"biomesoplenty.Dense Forest Tall Oak Brown"=
+    S:"biomesoplenty.Dense Forest Yellow Big Birch"=
     S:"biomesoplenty.Desert Big Birch 0"=
     S:"biomesoplenty.Desert Big Birch 1"=
     S:"biomesoplenty.Desert Big Pine 0"=
@@ -1084,6 +1115,37 @@
     S:"biomesoplenty.Dunes Tall Oak Autumn"=
     S:"biomesoplenty.Dunes Tall Oak Brown"=
     S:"biomesoplenty.Dunes Yellow Big Birch"=
+    S:"biomesoplenty.Eucalyptus Forest Big Birch 0"=
+    S:"biomesoplenty.Eucalyptus Forest Big Birch 1"=
+    S:"biomesoplenty.Eucalyptus Forest Big Pine 0"=
+    S:"biomesoplenty.Eucalyptus Forest Big Pine 1"=
+    S:"biomesoplenty.Eucalyptus Forest Block Maple"=
+    S:"biomesoplenty.Eucalyptus Forest Block Oak 0"=
+    S:"biomesoplenty.Eucalyptus Forest Block Oak Autumn"=
+    S:"biomesoplenty.Eucalyptus Forest Block Oak Brown"=
+    S:"biomesoplenty.Eucalyptus Forest Block Oak Dark"=
+    S:"biomesoplenty.Eucalyptus Forest Cyprus Oak 0"=
+    S:"biomesoplenty.Eucalyptus Forest Cyprus Willow"=
+    S:"biomesoplenty.Eucalyptus Forest Dark Hat"=
+    S:"biomesoplenty.Eucalyptus Forest Dead Tree 0"=
+    S:"biomesoplenty.Eucalyptus Forest Great Oak 0"=
+    S:"biomesoplenty.Eucalyptus Forest Great Oak Autumn"=
+    S:"biomesoplenty.Eucalyptus Forest Great Oak Brown"=
+    S:"biomesoplenty.Eucalyptus Forest Great Oak Dark"=
+    S:"biomesoplenty.Eucalyptus Forest Hat Sacred Tree"=
+    S:"biomesoplenty.Eucalyptus Forest Hat Tree 0"=
+    S:"biomesoplenty.Eucalyptus Forest Pertrified Dead Tree"=
+    S:"biomesoplenty.Eucalyptus Forest Swamp Oak 0"=
+    S:"biomesoplenty.Eucalyptus Forest Tall Cherry"=
+    S:"biomesoplenty.Eucalyptus Forest Tall Dark Oak"=
+    S:"biomesoplenty.Eucalyptus Forest Tall Fir"=
+    S:"biomesoplenty.Eucalyptus Forest Tall Jacaranda"=
+    S:"biomesoplenty.Eucalyptus Forest Tall Magic Tree"=
+    S:"biomesoplenty.Eucalyptus Forest Tall Maple"=
+    S:"biomesoplenty.Eucalyptus Forest Tall Oak 0"=
+    S:"biomesoplenty.Eucalyptus Forest Tall Oak Autumn"=
+    S:"biomesoplenty.Eucalyptus Forest Tall Oak Brown"=
+    S:"biomesoplenty.Eucalyptus Forest Yellow Big Birch"=
     S:"biomesoplenty.Extreme Hills Big Birch 0"=
     S:"biomesoplenty.Extreme Hills Big Birch 1"=
     S:"biomesoplenty.Extreme Hills Big Pine 0"=
@@ -1735,6 +1797,68 @@
     S:"biomesoplenty.Kelp Forest Tall Oak Autumn"=
     S:"biomesoplenty.Kelp Forest Tall Oak Brown"=
     S:"biomesoplenty.Kelp Forest Yellow Big Birch"=
+    S:"biomesoplenty.Land of Lakes Big Birch 0"=
+    S:"biomesoplenty.Land of Lakes Big Birch 1"=
+    S:"biomesoplenty.Land of Lakes Big Pine 0"=
+    S:"biomesoplenty.Land of Lakes Big Pine 1"=
+    S:"biomesoplenty.Land of Lakes Block Maple"=
+    S:"biomesoplenty.Land of Lakes Block Oak 0"=
+    S:"biomesoplenty.Land of Lakes Block Oak Autumn"=
+    S:"biomesoplenty.Land of Lakes Block Oak Brown"=
+    S:"biomesoplenty.Land of Lakes Block Oak Dark"=
+    S:"biomesoplenty.Land of Lakes Cyprus Oak 0"=
+    S:"biomesoplenty.Land of Lakes Cyprus Willow"=
+    S:"biomesoplenty.Land of Lakes Dark Hat"=
+    S:"biomesoplenty.Land of Lakes Dead Tree 0"=
+    S:"biomesoplenty.Land of Lakes Great Oak 0"=
+    S:"biomesoplenty.Land of Lakes Great Oak Autumn"=
+    S:"biomesoplenty.Land of Lakes Great Oak Brown"=
+    S:"biomesoplenty.Land of Lakes Great Oak Dark"=
+    S:"biomesoplenty.Land of Lakes Hat Sacred Tree"=
+    S:"biomesoplenty.Land of Lakes Hat Tree 0"=
+    S:"biomesoplenty.Land of Lakes Marsh Big Birch 0"=
+    S:"biomesoplenty.Land of Lakes Marsh Big Birch 1"=
+    S:"biomesoplenty.Land of Lakes Marsh Big Pine 0"=
+    S:"biomesoplenty.Land of Lakes Marsh Big Pine 1"=
+    S:"biomesoplenty.Land of Lakes Marsh Block Maple"=
+    S:"biomesoplenty.Land of Lakes Marsh Block Oak 0"=
+    S:"biomesoplenty.Land of Lakes Marsh Block Oak Autumn"=
+    S:"biomesoplenty.Land of Lakes Marsh Block Oak Brown"=
+    S:"biomesoplenty.Land of Lakes Marsh Block Oak Dark"=
+    S:"biomesoplenty.Land of Lakes Marsh Cyprus Oak 0"=
+    S:"biomesoplenty.Land of Lakes Marsh Cyprus Willow"=
+    S:"biomesoplenty.Land of Lakes Marsh Dark Hat"=
+    S:"biomesoplenty.Land of Lakes Marsh Dead Tree 0"=
+    S:"biomesoplenty.Land of Lakes Marsh Great Oak 0"=
+    S:"biomesoplenty.Land of Lakes Marsh Great Oak Autumn"=
+    S:"biomesoplenty.Land of Lakes Marsh Great Oak Brown"=
+    S:"biomesoplenty.Land of Lakes Marsh Great Oak Dark"=
+    S:"biomesoplenty.Land of Lakes Marsh Hat Sacred Tree"=
+    S:"biomesoplenty.Land of Lakes Marsh Hat Tree 0"=
+    S:"biomesoplenty.Land of Lakes Marsh Pertrified Dead Tree"=
+    S:"biomesoplenty.Land of Lakes Marsh Swamp Oak 0"=
+    S:"biomesoplenty.Land of Lakes Marsh Tall Cherry"=
+    S:"biomesoplenty.Land of Lakes Marsh Tall Dark Oak"=
+    S:"biomesoplenty.Land of Lakes Marsh Tall Fir"=
+    S:"biomesoplenty.Land of Lakes Marsh Tall Jacaranda"=
+    S:"biomesoplenty.Land of Lakes Marsh Tall Magic Tree"=
+    S:"biomesoplenty.Land of Lakes Marsh Tall Maple"=
+    S:"biomesoplenty.Land of Lakes Marsh Tall Oak 0"=
+    S:"biomesoplenty.Land of Lakes Marsh Tall Oak Autumn"=
+    S:"biomesoplenty.Land of Lakes Marsh Tall Oak Brown"=
+    S:"biomesoplenty.Land of Lakes Marsh Yellow Big Birch"=
+    S:"biomesoplenty.Land of Lakes Pertrified Dead Tree"=
+    S:"biomesoplenty.Land of Lakes Swamp Oak 0"=
+    S:"biomesoplenty.Land of Lakes Tall Cherry"=
+    S:"biomesoplenty.Land of Lakes Tall Dark Oak"=
+    S:"biomesoplenty.Land of Lakes Tall Fir"=
+    S:"biomesoplenty.Land of Lakes Tall Jacaranda"=
+    S:"biomesoplenty.Land of Lakes Tall Magic Tree"=
+    S:"biomesoplenty.Land of Lakes Tall Maple"=
+    S:"biomesoplenty.Land of Lakes Tall Oak 0"=
+    S:"biomesoplenty.Land of Lakes Tall Oak Autumn"=
+    S:"biomesoplenty.Land of Lakes Tall Oak Brown"=
+    S:"biomesoplenty.Land of Lakes Yellow Big Birch"=
     S:"biomesoplenty.Lavender Fields Big Birch 0"=
     S:"biomesoplenty.Lavender Fields Big Birch 1"=
     S:"biomesoplenty.Lavender Fields Big Pine 0"=
@@ -2920,6 +3044,37 @@
     S:"biomesoplenty.Seasonal Forest Block Oak Autumn"=
     S:"biomesoplenty.Seasonal Forest Block Oak Brown"=
     S:"biomesoplenty.Seasonal Forest Block Oak Dark"=
+    S:"biomesoplenty.Seasonal Forest Clearing Big Birch 0"=
+    S:"biomesoplenty.Seasonal Forest Clearing Big Birch 1"=
+    S:"biomesoplenty.Seasonal Forest Clearing Big Pine 0"=
+    S:"biomesoplenty.Seasonal Forest Clearing Big Pine 1"=
+    S:"biomesoplenty.Seasonal Forest Clearing Block Maple"=
+    S:"biomesoplenty.Seasonal Forest Clearing Block Oak 0"=
+    S:"biomesoplenty.Seasonal Forest Clearing Block Oak Autumn"=
+    S:"biomesoplenty.Seasonal Forest Clearing Block Oak Brown"=
+    S:"biomesoplenty.Seasonal Forest Clearing Block Oak Dark"=
+    S:"biomesoplenty.Seasonal Forest Clearing Cyprus Oak 0"=
+    S:"biomesoplenty.Seasonal Forest Clearing Cyprus Willow"=
+    S:"biomesoplenty.Seasonal Forest Clearing Dark Hat"=
+    S:"biomesoplenty.Seasonal Forest Clearing Dead Tree 0"=
+    S:"biomesoplenty.Seasonal Forest Clearing Great Oak 0"=
+    S:"biomesoplenty.Seasonal Forest Clearing Great Oak Autumn"=
+    S:"biomesoplenty.Seasonal Forest Clearing Great Oak Brown"=
+    S:"biomesoplenty.Seasonal Forest Clearing Great Oak Dark"=
+    S:"biomesoplenty.Seasonal Forest Clearing Hat Sacred Tree"=
+    S:"biomesoplenty.Seasonal Forest Clearing Hat Tree 0"=
+    S:"biomesoplenty.Seasonal Forest Clearing Pertrified Dead Tree"=
+    S:"biomesoplenty.Seasonal Forest Clearing Swamp Oak 0"=
+    S:"biomesoplenty.Seasonal Forest Clearing Tall Cherry"=
+    S:"biomesoplenty.Seasonal Forest Clearing Tall Dark Oak"=
+    S:"biomesoplenty.Seasonal Forest Clearing Tall Fir"=
+    S:"biomesoplenty.Seasonal Forest Clearing Tall Jacaranda"=
+    S:"biomesoplenty.Seasonal Forest Clearing Tall Magic Tree"=
+    S:"biomesoplenty.Seasonal Forest Clearing Tall Maple"=
+    S:"biomesoplenty.Seasonal Forest Clearing Tall Oak 0"=
+    S:"biomesoplenty.Seasonal Forest Clearing Tall Oak Autumn"=
+    S:"biomesoplenty.Seasonal Forest Clearing Tall Oak Brown"=
+    S:"biomesoplenty.Seasonal Forest Clearing Yellow Big Birch"=
     S:"biomesoplenty.Seasonal Forest Cyprus Oak 0"=
     S:"biomesoplenty.Seasonal Forest Cyprus Willow"=
     S:"biomesoplenty.Seasonal Forest Dark Hat"=
@@ -3684,6 +3839,37 @@
     S:"biomesoplenty.Woodland Tall Oak Autumn"=
     S:"biomesoplenty.Woodland Tall Oak Brown"=
     S:"biomesoplenty.Woodland Yellow Big Birch"=
+    S:"biomesoplenty.Xeric Shrubland Big Birch 0"=
+    S:"biomesoplenty.Xeric Shrubland Big Birch 1"=
+    S:"biomesoplenty.Xeric Shrubland Big Pine 0"=
+    S:"biomesoplenty.Xeric Shrubland Big Pine 1"=
+    S:"biomesoplenty.Xeric Shrubland Block Maple"=
+    S:"biomesoplenty.Xeric Shrubland Block Oak 0"=
+    S:"biomesoplenty.Xeric Shrubland Block Oak Autumn"=
+    S:"biomesoplenty.Xeric Shrubland Block Oak Brown"=
+    S:"biomesoplenty.Xeric Shrubland Block Oak Dark"=
+    S:"biomesoplenty.Xeric Shrubland Cyprus Oak 0"=
+    S:"biomesoplenty.Xeric Shrubland Cyprus Willow"=
+    S:"biomesoplenty.Xeric Shrubland Dark Hat"=
+    S:"biomesoplenty.Xeric Shrubland Dead Tree 0"=
+    S:"biomesoplenty.Xeric Shrubland Great Oak 0"=
+    S:"biomesoplenty.Xeric Shrubland Great Oak Autumn"=
+    S:"biomesoplenty.Xeric Shrubland Great Oak Brown"=
+    S:"biomesoplenty.Xeric Shrubland Great Oak Dark"=
+    S:"biomesoplenty.Xeric Shrubland Hat Sacred Tree"=
+    S:"biomesoplenty.Xeric Shrubland Hat Tree 0"=
+    S:"biomesoplenty.Xeric Shrubland Pertrified Dead Tree"=
+    S:"biomesoplenty.Xeric Shrubland Swamp Oak 0"=
+    S:"biomesoplenty.Xeric Shrubland Tall Cherry"=
+    S:"biomesoplenty.Xeric Shrubland Tall Dark Oak"=
+    S:"biomesoplenty.Xeric Shrubland Tall Fir"=
+    S:"biomesoplenty.Xeric Shrubland Tall Jacaranda"=
+    S:"biomesoplenty.Xeric Shrubland Tall Magic Tree"=
+    S:"biomesoplenty.Xeric Shrubland Tall Maple"=
+    S:"biomesoplenty.Xeric Shrubland Tall Oak 0"=
+    S:"biomesoplenty.Xeric Shrubland Tall Oak Autumn"=
+    S:"biomesoplenty.Xeric Shrubland Tall Oak Brown"=
+    S:"biomesoplenty.Xeric Shrubland Yellow Big Birch"=
     S:"buildcraft.Desert Oil Field Big Birch 0"=
     S:"buildcraft.Desert Oil Field Big Birch 1"=
     S:"buildcraft.Desert Oil Field Big Pine 0"=
