Swap back to HQM

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -23,6 +23,7 @@ ae2stuff {
     B:Encoder=false
     B:Grower=false
     B:Inscriber=false
+    B:Wireless=false
 }
 
 
@@ -198,6 +199,11 @@ bcadditions {
     B:kinesisPipeWood=false
     B:refineryValve=false
     B:refinerywals=false
+}
+
+
+betterquesting {
+    B:submitstation=false
 }
 
 
@@ -6243,6 +6249,7 @@ gardentrees {
     B:thinlog.13059=false
     B:thinlog.13060=false
     B:thinlog.13061=false
+    B:thinlog.13062=false
     B:thinlog.13114=false
     B:thinlog.13115=false
     B:thinlog.13116=false
@@ -6419,6 +6426,7 @@ gardentrees {
     B:thinlog.4867=false
     B:thinlog.4868=false
     B:thinlog.4869=false
+    B:thinlog.4870=false
     B:thinlog.4881=false
     B:thinlog.4883=false
     B:thinlog.4885=false
@@ -6563,6 +6571,7 @@ gardentrees {
     B:thinlog.771=false
     B:thinlog.772=false
     B:thinlog.773=false
+    B:thinlog.774=false
     B:thinlog.785=false
     B:thinlog.787=false
     B:thinlog.789=false
@@ -6613,6 +6622,7 @@ gardentrees {
     B:thinlog.8963=false
     B:thinlog.8964=false
     B:thinlog.8965=false
+    B:thinlog.8966=false
     B:thinlog.9018=false
     B:thinlog.9019=false
     B:thinlog.9020=false
@@ -6830,6 +6840,7 @@ gardentrees {
     B:thinlogfence.13059=false
     B:thinlogfence.13060=false
     B:thinlogfence.13061=false
+    B:thinlogfence.13062=false
     B:thinlogfence.13114=false
     B:thinlogfence.13115=false
     B:thinlogfence.13116=false
@@ -7006,6 +7017,7 @@ gardentrees {
     B:thinlogfence.4867=false
     B:thinlogfence.4868=false
     B:thinlogfence.4869=false
+    B:thinlogfence.4870=false
     B:thinlogfence.4881=false
     B:thinlogfence.4883=false
     B:thinlogfence.4885=false
@@ -7150,6 +7162,7 @@ gardentrees {
     B:thinlogfence.771=false
     B:thinlogfence.772=false
     B:thinlogfence.773=false
+    B:thinlogfence.774=false
     B:thinlogfence.785=false
     B:thinlogfence.787=false
     B:thinlogfence.789=false
@@ -7200,6 +7213,7 @@ gardentrees {
     B:thinlogfence.8963=false
     B:thinlogfence.8964=false
     B:thinlogfence.8965=false
+    B:thinlogfence.8966=false
     B:thinlogfence.9018=false
     B:thinlogfence.9019=false
     B:thinlogfence.9020=false
