--- a/config/headcrumbs.cfg
+++ b/config/headcrumbs.cfg
@@ -283,7 +283,7 @@ heads {
         Fluffycloud42
         Demosthenexx
         brokescience
-		AngieTheDemoness
+        AngieTheDemoness
         waterlubber
      >
     S:technic <
@@ -364,6 +364,9 @@ mob {
     # Setting this to false will disable special drops/weapons for certain celebrities. Existing mobs will still hold the weapons they spawned with.
     B:"Enable VIP drops"=true
     B:"Enable celebrity mobs"=true
+
+    # Setting this to false will force humans to not attack players with the same name as themselves
+    B:"Humans attack twins"=true
 
     # The maximum size of the group of mobs that will spawn at once
     I:"Maximum group size"=4
