--- a/config/machinemuse/powersuits.cfg
+++ b/config/machinemuse/powersuits.cfg
@@ -10,6 +10,7 @@ general {
     B:"Allow Conflicting Keybinds"=true
     B:"Auto-extract recipes"=false
     D:"Base Heat Cap"=50.0
+    D:"Energy per AE"=5.0
     D:"Energy per IC2 EU"=0.4
     D:"Energy per RF"=0.025
     D:"Maximum Armor per Piece"=6.0
@@ -38,38 +39,56 @@ hud {
 modules {
     B:"Active Camouflage"=true
     B:"Advanced Battery"=true
+    B:"Advanced Solar Generator"=true
     B:"Airtight Seal"=true
     B:"Apiarist Armor"=true
+    B:"AppEng EC Wireless Fluid Terminal"=true
+    B:"AppEng Wireless Terminal"=true
     B:"Aqua Affinity"=true
     B:Aurameter=true
+    B:Auto-Feeder=true
     B:Axe=true
     B:"Basic Battery"=true
     B:Binoculars=true
     B:"Blade Launcher"=true
     B:"Blink Drive"=true
     B:Chisel=true
+    B:Clock=true
+    B:Compass=true
     B:"Cooling System"=true
     B:"Custom Colour Module"=true
     B:"Diamond Drill Upgrade"=true
     B:"Diamond Plating"=true
+    B:"Dimensional Tear Generator"=true
     B:"Elite Battery"=true
     B:"Energy Shield"=true
     B:"Field Tinker Module"=true
     B:"Flight Control"=true
+    B:"Flint and Steel"=true
     B:Glider=true
     B:"Glow Module"=true
     B:Grafter=true
     B:"Heat Sink"=true
+    B:"In-Place Assembler"=true
     B:"Iron Plating"=true
     B:"Jet Boots"=true
     B:Jetpack=true
     B:"Jump Assist"=true
+    B:"Kinetic Generator"=true
+    B:"Leaf Blower"=true
+    B:"Lightning Summoner"=true
+    B:"Liquid Nitrogen Cooling System"=true
     B:"Lux Capacitor"=true
+    B:Magnet=true
+    B:"Mechanical Assistance"=true
     B:"Melee Assist"=true
+    B:"Mob Repulsor"=true
     B:"Night Vision"=true
+    B:"Ore Scanner"=true
     B:Parachute=true
     B:Pickaxe=true
     B:"Plasma Cannon"=true
+    B:"Prototype OmniProbe"=true
     B:"Prototype OmniWrench"=true
     B:Railgun=true
     B:Rototiller=true
@@ -77,11 +96,14 @@ modules {
     B:Shears=true
     B:"Shock Absorber"=true
     B:Shovel=true
+    B:"Solar Generator"=true
     B:"Sprint Assist"=true
     B:"Swim Boost"=true
+    B:"Thermal Generator"=true
     B:"Transparent Armor"=true
     B:"Uphill Step Assist"=true
     B:"Water Electrolyzer"=true
+    B:"Water Tank"=true
 }
 
 
@@ -92,11 +114,20 @@ properties {
     D:"Advanced Battery.Maximum Energy.base"=100000.0
     D:"Advanced Battery.Weight.Battery Size.multiplier"=8000.0
     D:"Advanced Battery.Weight.base"=2000.0
+    D:"Advanced Solar Generator.Daytime Energy Generation.base"=4500.0
+    D:"Advanced Solar Generator.Daytime Heat Generation.base"=15.0
+    D:"Advanced Solar Generator.Nighttime Energy Generation.base"=150.0
+    D:"Advanced Solar Generator.Nighttime Heat Generation.base"=5.0
+    D:"Advanced Solar Generator.Weight.base"=300.0
     D:"Apiarist Armor.Apiarist Armor Energy Consumption.base"=10.0
     D:"Aqua Affinity.Underwater Energy Consumption.Power.multiplier"=100.0
     D:"Aqua Affinity.Underwater Energy Consumption.base"=0.0
     D:"Aqua Affinity.Underwater Harvest Speed.Power.multiplier"=0.8
     D:"Aqua Affinity.Underwater Harvest Speed.base"=0.2
+    D:"Auto-Feeder.Auto-Feeder Efficiency.Efficiency.multiplier"=50.0
+    D:"Auto-Feeder.Auto-Feeder Efficiency.base"=50.0
+    D:"Auto-Feeder.Eating Energy Consumption.Efficiency.multiplier"=100.0
+    D:"Auto-Feeder.Eating Energy Consumption.base"=100.0
     D:"Axe.Axe Energy Consumption.Overclock.multiplier"=950.0
     D:"Axe.Axe Energy Consumption.base"=50.0
     D:"Axe.Axe Harvest Speed.Overclock.multiplier"=22.0
@@ -126,6 +157,8 @@ properties {
     D:"Custom Colour Module.Red Tint.Red Intensity.multiplier"=1.0
     D:"Diamond Plating.Armor (Physical).Plating Thickness.multiplier"=6.0
     D:"Diamond Plating.Weight.Plating Thickness.multiplier"=6000.0
+    D:"Dimensional Tear Generator.Energy Consumption.base"=20000.0
+    D:"Dimensional Tear Generator.Heat Generation.base"=55.0
     D:"Elite Battery.IC2 Tier.IC2 Tier.multiplier"=2.0
     D:"Elite Battery.IC2 Tier.base"=1.0
     D:"Elite Battery.Maximum Energy.Battery Size.multiplier"=4250000.0
@@ -135,6 +168,7 @@ properties {
     D:"Energy Shield.Armor (Energy).Field Strength.multiplier"=6.0
     D:"Energy Shield.Energy Per Damage.Field Strength.multiplier"=500.0
     D:"Flight Control.Y-look ratio.Verticality.multiplier"=1.0
+    D:"Flint and Steel.Ignition Energy Consumption.base"=1000.0
     D:"Glow Module.Blue Glow.Blue Glow.multiplier"=1.0
     D:"Glow Module.Green Glow.Green Glow.multiplier"=1.0
     D:"Glow Module.Red Glow.Red Glow.multiplier"=1.0
@@ -159,16 +193,40 @@ properties {
     D:"Jump Assist.Jump Energy Consumption.base"=0.0
     D:"Jump Assist.Jump Exhaustion Compensation.Compensation.multiplier"=1.0
     D:"Jump Assist.Jump Exhaustion Compensation.base"=0.0
+    D:"Kinetic Generator.Energy Per 5 Blocks.Energy Generated.multiplier"=600.0
+    D:"Kinetic Generator.Energy Per 5 Blocks.base"=200.0
+    D:"Kinetic Generator.Heat Generation.base"=5.0
+    D:"Kinetic Generator.Weight.Energy Generated.multiplier"=3000.0
+    D:"Kinetic Generator.Weight.base"=1000.0
+    D:"Leaf Blower.Energy Consumption.base"=100.0
+    D:"Leaf Blower.Leaf Radius.base"=1.0
+    D:"Leaf Blower.Plant Radius.base"=1.0
+    D:"Leaf Blower.Snow Radius.base"=1.0
+    D:"Lightning Summoner.Energy Consumption.base"=490000.0
+    D:"Lightning Summoner.Heat Emission.base"=100.0
+    D:"Liquid Nitrogen Cooling System.Cooling Bonus.Power.multiplier"=7.0
+    D:"Liquid Nitrogen Cooling System.Energy Consumption.Power.multiplier"=16.0
     D:"Lux Capacitor.Lux Capacitor Blue Hue.Blue.multiplier"=1.0
     D:"Lux Capacitor.Lux Capacitor Energy Consumption.base"=100.0
     D:"Lux Capacitor.Lux Capacitor Green Hue.Green.multiplier"=1.0
     D:"Lux Capacitor.Lux Capacitor Red Hue.Red.multiplier"=1.0
+    D:"Magnet.Energy Consumption.base"=200.0
+    D:"Magnet.Magnet Radius.base"=5.0
+    D:Magnet.Weight.base=1000.0
+    D:"Mechanical Assistance.Power Usage.Robotic Assistance.multiplier"=500.0
+    D:"Mechanical Assistance.Weight.Robotic Assistance.multiplier"=-10000.0
     D:"Melee Assist.Melee Damage.Impact.multiplier"=8.0
     D:"Melee Assist.Melee Damage.base"=2.0
     D:"Melee Assist.Melee Knockback.Carry-through.multiplier"=1.0
     D:"Melee Assist.Punch Energy Consumption.Carry-through.multiplier"=20.0
     D:"Melee Assist.Punch Energy Consumption.Impact.multiplier"=100.0
     D:"Melee Assist.Punch Energy Consumption.base"=10.0
+    D:"Mob Repulsor.Repulsor Energy Consumption.base"=250.0
+    D:"Mob Repulsor.Weight.base"=2000.0
+    D:"Ore Scanner.Energy Per Block.base"=50.0
+    D:"Ore Scanner.X Radius.base"=1.0
+    D:"Ore Scanner.Y Radius.base"=1.0
+    D:"Ore Scanner.Z Radius.base"=1.0
     D:"Pickaxe.Pickaxe Energy Consumption.Overclock.multiplier"=950.0
     D:"Pickaxe.Pickaxe Energy Consumption.base"=50.0
     D:"Pickaxe.Pickaxe Harvest Speed.Overclock.multiplier"=22.0
@@ -202,6 +260,8 @@ properties {
     D:"Shovel.Shovel Energy Consumption.base"=50.0
     D:"Shovel.Shovel Harvest Speed.Overclock.multiplier"=22.0
     D:"Shovel.Shovel Harvest Speed.base"=8.0
+    D:"Solar Generator.Daytime Energy Generation.base"=1500.0
+    D:"Solar Generator.Nighttime Energy Generation.base"=150.0
     D:"Sprint Assist.Sprint Energy Consumption.Compensation.multiplier"=2.0
     D:"Sprint Assist.Sprint Energy Consumption.Power.multiplier"=10.0
     D:"Sprint Assist.Sprint Energy Consumption.base"=0.0
@@ -215,7 +275,17 @@ properties {
     D:"Sprint Assist.Walking Speed Multiplier.base"=1.0
     D:"Swim Boost.Swim Boost Energy Consumption.Thrust.multiplier"=100.0
     D:"Swim Boost.Underwater Movement Boost.Thrust.multiplier"=1.0
+    D:"Thermal Generator.Energy Generation.Energy Generated.multiplier"=25.0
+    D:"Thermal Generator.Energy Generation.base"=25.0
+    D:"Thermal Generator.Weight.Energy Generated.multiplier"=1000.0
+    D:"Thermal Generator.Weight.base"=1000.0
     D:"Water Electrolyzer.Jolt Energy.base"=1000.0
+    D:"Water Tank.Heat Activation Percent.Activation Percent.multiplier"=0.5
+    D:"Water Tank.Heat Activation Percent.base"=0.5
+    D:"Water Tank.Tank Size.Tank Size.multiplier"=800.0
+    D:"Water Tank.Tank Size.base"=200.0
+    D:"Water Tank.Weight.Tank Size.multiplier"=4000.0
+    D:"Water Tank.Weight.base"=1000.0
 }
 
 
