--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -40,6 +40,18 @@ general {
     # Set this to false to disable the Fallen Kanade flower (gives Regeneration). This config option is here for those using Blood Magic. Note: Turning this off will not remove ones already in the world, it'll simply prevent the crafting.
     B:fallenKanade.enabled=true
 
+    # Set this to false to disable the fancy skybox in Garden of Glass.
+    B:fancySkybox.enable=true
+
+    # Set this to true to enable the fancy skybox in non Garden of Glass worlds. (Does not require Garden of Glass loaded to use, needs 'fancySkybox.enable' to be true as well)
+    B:fancySkybox.normalWorlds=false
+
+    # The height of the Flugel Tiara flight bar. You can change this if you have a mod that adds a bar in that spot.
+    I:flightBar.height=49
+
+    # The height of the Flugel Tiara flight bar if your breath bar is shown. You can change this if you have a mod that adds a bar in that spot.
+    I:flightBarBreath.height=59
+
     # Turn this off ONLY IF you're on an extremely large world with an exaggerated count of Mana Spreaders/Mana Pools and are experiencing TPS lag. This toggles whether flowers are strict with their checking for connecting to pools/spreaders or just check whenever possible.
     B:flower.forceCheck=true
 
