Adding back RTG....again.

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -6245,6 +6245,10 @@ gardentrees {
     B:thinlog.12909=false
     B:thinlog.12919=false
     B:thinlog.1299=false
+    B:thinlog.13027=false
+    B:thinlog.13028=false
+    B:thinlog.13029=false
+    B:thinlog.13030=false
     B:thinlog.13058=false
     B:thinlog.13059=false
     B:thinlog.13060=false
@@ -6419,6 +6423,10 @@ gardentrees {
     B:thinlog.481=false
     B:thinlog.482=false
     B:thinlog.483=false
+    B:thinlog.4835=false
+    B:thinlog.4836=false
+    B:thinlog.4837=false
+    B:thinlog.4838=false
     B:thinlog.4857=false
     B:thinlog.4863=false
     B:thinlog.4865=false
@@ -6564,6 +6572,10 @@ gardentrees {
     B:thinlog.62283=false
     B:thinlog.62284=false
     B:thinlog.631=false
+    B:thinlog.739=false
+    B:thinlog.740=false
+    B:thinlog.741=false
+    B:thinlog.742=false
     B:thinlog.761=false
     B:thinlog.767=false
     B:thinlog.769=false
@@ -6618,6 +6630,10 @@ gardentrees {
     B:thinlog.8787=false
     B:thinlog.8813=false
     B:thinlog.8823=false
+    B:thinlog.8931=false
+    B:thinlog.8932=false
+    B:thinlog.8933=false
+    B:thinlog.8934=false
     B:thinlog.8962=false
     B:thinlog.8963=false
     B:thinlog.8964=false
@@ -6836,6 +6852,10 @@ gardentrees {
     B:thinlogfence.12909=false
     B:thinlogfence.12919=false
     B:thinlogfence.1299=false
+    B:thinlogfence.13027=false
+    B:thinlogfence.13028=false
+    B:thinlogfence.13029=false
+    B:thinlogfence.13030=false
     B:thinlogfence.13058=false
     B:thinlogfence.13059=false
     B:thinlogfence.13060=false
@@ -7010,6 +7030,10 @@ gardentrees {
     B:thinlogfence.481=false
     B:thinlogfence.482=false
     B:thinlogfence.483=false
+    B:thinlogfence.4835=false
+    B:thinlogfence.4836=false
+    B:thinlogfence.4837=false
+    B:thinlogfence.4838=false
     B:thinlogfence.4857=false
     B:thinlogfence.4863=false
     B:thinlogfence.4865=false
@@ -7155,6 +7179,10 @@ gardentrees {
     B:thinlogfence.62283=false
     B:thinlogfence.62284=false
     B:thinlogfence.631=false
+    B:thinlogfence.739=false
+    B:thinlogfence.740=false
+    B:thinlogfence.741=false
+    B:thinlogfence.742=false
     B:thinlogfence.761=false
     B:thinlogfence.767=false
     B:thinlogfence.769=false
@@ -7209,6 +7237,10 @@ gardentrees {
     B:thinlogfence.8787=false
     B:thinlogfence.8813=false
     B:thinlogfence.8823=false
+    B:thinlogfence.8931=false
+    B:thinlogfence.8932=false
+    B:thinlogfence.8933=false
+    B:thinlogfence.8934=false
     B:thinlogfence.8962=false
     B:thinlogfence.8963=false
     B:thinlogfence.8964=false
@@ -7480,6 +7512,7 @@ harderores {
     B:dummyOreIron=false
     B:dummyOreLead=false
     B:dummyOreNickel=false
+    B:dummyOreOsmium=false
     B:dummyOreSilver=false
     B:dummyOreTin=false
     B:dummyOreUranium=false
@@ -7507,11 +7540,13 @@ harderores {
     B:oreflowers2.5=false
     B:oreflowers2.6=false
     B:oreflowers2.7=false
+    B:oreflowers3=false
     B:oregold.15=true
     B:oreiron.15=true
     B:orelead.15=true
     B:orelimonite=true
     B:orenickel.15=true
+    B:oreosmium.15=true
     B:oreredstone=false
     B:oresilver.15=true
     B:oretin.15=true
