--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -7,6 +7,9 @@ configversion {
 
 
 general {
+    # Enchantment ID for the Pulverizer enchantment. [range: 64 ~ 255, default: 81]
+    I:PulverizerEnchantmentID=81
+
     # If Gany's Surface, Et Futurum, or Chisel is installed and this is true, cobblestone cannot be used to create stone tools,
     # instead diorite is used. This prolongs the life of wood tools so it isn't "make a wood pickaxe to
     # mine 3 stone and upgrade." [default: true]
@@ -52,6 +55,8 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsCadmium=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsCopper=2
 
     #  [range: 0 ~ 2, default: 1]
@@ -59,7 +64,12 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsLead=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsNickel=2
+
+    #  [range: 0 ~ 2, default: 1]
+    I:OreExistsOsmium=1
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsSilver=2
@@ -69,6 +79,8 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsTin=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsUranium=2
 
     #  [range: 0 ~ 2, default: 1]
