--- a/config/HarderWildlife.cfg
+++ b/config/HarderWildlife.cfg
@@ -130,7 +130,7 @@ seasons {
     # Toggle for whether or not seasonal variation in weather should occur. [default: true]
     B:doSeasons=true
 
-    # Set to true to use ᴼC and cm.  Temperatures are only approximately equivalent to the real world
+    # [WAILA] Set to true to use ᴼC and cm.  Temperatures are only approximately equivalent to the real world
     # at 10ᴼF = 0.1ᴼMC [default: false]
     B:metricUnits=false
 
